--- a/iterm2_setting/com.googlecode.iterm2.plist
+++ b/iterm2_setting/com.googlecode.iterm2.plist
@@ -10,6 +10,8 @@
 	<false/>
 	<key>AppleAntiAliasingThreshold</key>
 	<integer>1</integer>
+	<key>ApplePressAndHoldEnabled</key>
+	<false/>
 	<key>AppleScrollAnimationEnabled</key>
 	<integer>0</integer>
 	<key>AppleSmoothFixedFontsSizeThreshold</key>
@@ -571,7 +573,7 @@
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>931 312 592 584 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1283 56 1277 1361 0 0 2560 1417 </string>
+	<string>1284 654 580 763 0 0 2560 1417 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1133,13 +1135,13 @@
 			<key>Name</key>
 			<string>c-yokoyama-iterm2-pref</string>
 			<key>Non Ascii Font</key>
-			<string>HackNerdFontComplete-Regular 10</string>
+			<string>HackNerdFontComplete-Regular 12</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Non-ASCII Ligatures</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Monaco 10</string>
+			<string>Monaco 12</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1579,7 +1581,7 @@
 			<key>Title Components</key>
 			<integer>513</integer>
 			<key>Transparency</key>
-			<real>0.051711570775541428</real>
+			<real>0.017322690699399297</real>
 			<key>Triggers</key>
 			<array/>
 			<key>Unicode Version</key>
@@ -1608,26 +1610,40 @@
 	</array>
 	<key>NoSyncAllAppVersions</key>
 	<array>
-		<string>3.3.3beta1</string>
-		<string>3.3.5beta2</string>
 		<string>3.3.2beta1</string>
-		<string>3.3.7beta1</string>
-		<string>3.3.7beta3</string>
-		<string>3.3.1beta1</string>
-		<string>3.3.3beta2</string>
-		<string>3.3.5beta1</string>
-		<string>3.3.0beta16</string>
-		<string>3.3.0beta15</string>
-		<string>3.3.0beta14</string>
-		<string>3.3.0beta13</string>
-		<string>3.3.0beta12</string>
 		<string>3.3.0beta11</string>
+		<string>3.3.8beta2</string>
+		<string>3.3.10beta3</string>
 		<string>3.3.0beta10</string>
-		<string>3.3.5beta3</string>
+		<string>3.3.11beta1</string>
+		<string>3.3.7beta3</string>
+		<string>3.3.5beta2</string>
+		<string>3.3.10beta2</string>
+		<string>3.3.3beta1</string>
+		<string>3.3.0beta16</string>
+		<string>3.3.7beta1</string>
+		<string>3.3.8beta5</string>
+		<string>3.3.10beta1</string>
 		<string>3.3.2beta2</string>
+		<string>3.3.0beta15</string>
+		<string>3.3.8beta3</string>
 		<string>3.3.4beta1</string>
-		<string>3.3.7beta2</string>
+		<string>3.3.0beta14</string>
+		<string>3.3.8beta1</string>
+		<string>3.3.7beta4</string>
 		<string>3.3.4</string>
+		<string>3.3.5beta3</string>
+		<string>3.3.3beta2</string>
+		<string>3.3.0beta13</string>
+		<string>3.3.1beta1</string>
+		<string>3.3.12beta3</string>
+		<string>3.3.7beta2</string>
+		<string>3.3.5beta1</string>
+		<string>3.3.0beta12</string>
+		<string>3.3.12beta2</string>
+		<string>3.3.9beta1</string>
+		<string>3.3.8beta4</string>
+		<string>3.3.10beta4</string>
 	</array>
 	<key>NoSyncBFPFavorites</key>
 	<array>
@@ -1640,12 +1656,14 @@
 		<string>Monaco</string>
 		<string>Menlo</string>
 	</array>
+	<key>NoSyncCommandHistoryHasEverBeenUsed</key>
+	<true/>
 	<key>NoSyncFrame_SharedPreferences</key>
 	<dict>
 		<key>screenFrame</key>
-		<string>{{0, 0}, {2560, 1440}}</string>
+		<string>{{0, 0}, {3840, 2160}}</string>
 		<key>topLeft</key>
-		<string>{606, 939}</string>
+		<string>{731, 1284}</string>
 	</dict>
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
@@ -1654,7 +1672,7 @@
 	<key>NoSyncLastTipTime</key>
 	<real>584869886.70671403</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>172</integer>
+	<integer>424</integer>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -2015,6 +2033,14 @@
 				<key>isTerminal</key>
 				<true/>
 				<key>name</key>
+				<string>currentTab.currentSession.jobPid</string>
+				<key>nonterminalContext</key>
+				<integer>0</integer>
+			</dict>
+			<dict>
+				<key>isTerminal</key>
+				<true/>
+				<key>name</key>
 				<string>frame</string>
 				<key>nonterminalContext</key>
 				<integer>0</integer>
@@ -2048,6 +2074,14 @@
 				<true/>
 				<key>name</key>
 				<string>currentTab.currentSession.terminalWindowName</string>
+				<key>nonterminalContext</key>
+				<integer>0</integer>
+			</dict>
+			<dict>
+				<key>isTerminal</key>
+				<true/>
+				<key>name</key>
+				<string>currentTab.currentSession.lastCommand</string>
 				<key>nonterminalContext</key>
 				<integer>0</integer>
 			</dict>
@@ -2379,32 +2413,6 @@
 			</dict>
 		</array>
 	</dict>
-	<key>NoSyncSearchHistory</key>
-	<array>
-		<string>task</string>
-		<string>imaf</string>
-		<string>image</string>
-		<string>data</string>
-		<string>OutOfMemory</string>
-		<string>error</string>
-		<string>OutOf</string>
-		<string>ecp-content-mgr-external</string>
-		<string>contents3</string>
-		<string>contents</string>
-	</array>
-	<key>NoSyncSearchHistory2</key>
-	<array>
-		<string>snippe</string>
-		<string>spec</string>
-		<string>default_type</string>
-		<string>ServiceAccountq</string>
-		<string>ServiceAccountr</string>
-		<string>apiGroup: batch</string>
-		<string>apiGroup: apps</string>
-		<string>apiGroup: Apps</string>
-		<string>apiGroi</string>
-		<string>apiGrpip</string>
-	</array>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>578899044.01003504</real>
 	<key>NoSyncTipOfTheDayEligibilityBeganTime</key>
@@ -2537,7 +2545,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-11-10T11:48:37Z</date>
+	<date>2020-07-15T04:42:49Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SUUpdateRelaunchingMarker</key>
@@ -2605,7 +2613,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.3.7beta3</string>
+	<string>3.3.12beta3</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>7</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
