--- a/osx-plist/localhost.anyenv-update.plist
+++ b/osx-plist/localhost.anyenv-update.plist
@@ -21,6 +21,8 @@
 	<dict>
 		<key>Hour</key>
 		<integer>12</integer>
+        <key>Minute</key>
+        <integer>10</integer>
 	</dict>
 </dict>
 </plist>
